--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
                 <div class="navbar-navigation">
 
                     <div class="site-logo">
-                        <!-- svg -->
+                        <svg class="icon-logo" xmlns="http://www.w3.org/2000/svg" width="40" height="40"
+                            viewBox="0 0 48 48">
+                            <path
+                                d="M24 8C13.167 8 4 23.29 4 31.807 4 34.78 12 40 24 40s20-5.301 20-8.193C44 23.29 35.167 8 24 8Zm0 29.108c-10.225 0-16.29-4.054-16.999-5.47a14.619 14.619 0 0 1 1.61-6.01c1.836-3.452 4.718-5.226 6.056-5.226 2.041 0 3.541 3.775 5.416 3.775 3.417 0 6.709-8.394 9.209-8.394 2.625 0 10.166 8.434 11.483 14.538.123.423.198.858.223 1.296-.757 1.431-6.866 5.491-16.998 5.491Z" />
+                        </svg>
                         <a href="index.html">Tech & things</a>
                     </div>
 
@@ -38,7 +42,11 @@
 
                 <div class="header-cart">
                     <a href="#">
-                        <span class="header-cart-count" data-header-cart-count="0">0</span>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" fill="none" viewBox="0 0 48 48">
+                            <path fill="#69AFB1"
+                                d="m38.98 15.598-1.863 10.29a3.698 3.698 0 0 1-1.258 2.173 3.65 3.65 0 0 1-2.347.858h-17.72l.672 3.691h16.421c.725 0 1.434.217 2.037.622a3.687 3.687 0 0 1 1.35 1.657 3.715 3.715 0 0 1-.794 4.023 3.643 3.643 0 0 1-3.995.8 3.671 3.671 0 0 1-1.646-1.36 3.71 3.71 0 0 1-.618-2.05c0-.42.073-.836.214-1.23h-8.982a3.712 3.712 0 0 1-.2 2.941 3.683 3.683 0 0 1-1.154 1.323 3.65 3.65 0 0 1-4.818-.552 3.716 3.716 0 0 1-.06-4.882L9.986 10.461H7.222c-.324 0-.635-.13-.864-.36a1.235 1.235 0 0 1 0-1.74c.23-.231.54-.361.864-.361h2.765c.57.001 1.123.203 1.56.571.438.368.735.88.838 1.444l.749 4.137h24.64a1.2 1.2 0 0 1 .931.447 1.187 1.187 0 0 1 .275 1Z" />
+                            </svg>
+                        <span class="header-cart-count" data-header-cart-count="0"></span>
                     </a>
                 </div>
 
@@ -47,7 +55,10 @@
 
     </header>
 
-
+    <!-- <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="none">
+        <path fill="#69AFB1"
+            d="m38.98 15.598-1.863 10.29a3.698 3.698 0 0 1-1.258 2.173 3.65 3.65 0 0 1-2.347.858h-17.72l.672 3.691h16.421c.725 0 1.434.217 2.037.622a3.687 3.687 0 0 1 1.35 1.657 3.715 3.715 0 0 1-.794 4.023 3.643 3.643 0 0 1-3.995.8 3.671 3.671 0 0 1-1.646-1.36 3.71 3.71 0 0 1-.618-2.05c0-.42.073-.836.214-1.23h-8.982a3.712 3.712 0 0 1-.2 2.941 3.683 3.683 0 0 1-1.154 1.323 3.65 3.65 0 0 1-4.818-.552 3.716 3.716 0 0 1-.06-4.882L9.986 10.461H7.222c-.324 0-.635-.13-.864-.36a1.235 1.235 0 0 1 0-1.74c.23-.231.54-.361.864-.361h2.765c.57.001 1.123.203 1.56.571.438.368.735.88.838 1.444l.749 4.137h24.64a1.2 1.2 0 0 1 .931.447 1.187 1.187 0 0 1 .275 1Z" />
+        </svg> -->
 
     <main>
 
