--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
         <!--NAVBAR-->
         <nav class="navbar">
             <div class="layout-container navbar-flex">
-
                 <div class="navbar-navigation">
-
                     <div class="site-logo">
                         <svg class="icon-logo" xmlns="http://www.w3.org/2000/svg" width="40" height="40"
                             viewBox="0 0 48 48">
@@ -31,39 +29,33 @@
                         </svg>
                         <a href="index.html">Tech & things</a>
                     </div>
-
                     <ul class="navigation">
                         <li><a href="" class="active">Productos</a></li>
                         <li><a href="">Categorías</a></li>
                         <li><a href="">Promociones</a></li>
                     </ul>
-
                 </div>
-
-                <div class="header-cart">
-                    <a href="#">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" fill="none" viewBox="0 0 48 48">
-                            <path fill="#69AFB1"
-                                d="m38.98 15.598-1.863 10.29a3.698 3.698 0 0 1-1.258 2.173 3.65 3.65 0 0 1-2.347.858h-17.72l.672 3.691h16.421c.725 0 1.434.217 2.037.622a3.687 3.687 0 0 1 1.35 1.657 3.715 3.715 0 0 1-.794 4.023 3.643 3.643 0 0 1-3.995.8 3.671 3.671 0 0 1-1.646-1.36 3.71 3.71 0 0 1-.618-2.05c0-.42.073-.836.214-1.23h-8.982a3.712 3.712 0 0 1-.2 2.941 3.683 3.683 0 0 1-1.154 1.323 3.65 3.65 0 0 1-4.818-.552 3.716 3.716 0 0 1-.06-4.882L9.986 10.461H7.222c-.324 0-.635-.13-.864-.36a1.235 1.235 0 0 1 0-1.74c.23-.231.54-.361.864-.361h2.765c.57.001 1.123.203 1.56.571.438.368.735.88.838 1.444l.749 4.137h24.64a1.2 1.2 0 0 1 .931.447 1.187 1.187 0 0 1 .275 1Z" />
+                <div id="header-cart">
+                    <a href="#" class="header-cart-info">
+                        <div class="header-cart-icon">
+                            <svg class="icon-logo" xmlns="http://www.w3.org/2000/svg" width="46" height="46"
+                                viewBox="0 0 48 48">
+                                <path
+                                    d="m38.98 15.598-1.863 10.29a3.698 3.698 0 0 1-1.258 2.173 3.65 3.65 0 0 1-2.347.858h-17.72l.672 3.691h16.421c.725 0 1.434.217 2.037.622a3.687 3.687 0 0 1 1.35 1.657 3.715 3.715 0 0 1-.794 4.023 3.643 3.643 0 0 1-3.995.8 3.671 3.671 0 0 1-1.646-1.36 3.71 3.71 0 0 1-.618-2.05c0-.42.073-.836.214-1.23h-8.982a3.712 3.712 0 0 1-.2 2.941 3.683 3.683 0 0 1-1.154 1.323 3.65 3.65 0 0 1-4.818-.552 3.716 3.716 0 0 1-.06-4.882L9.986 10.461H7.222c-.324 0-.635-.13-.864-.36a1.235 1.235 0 0 1 0-1.74c.23-.231.54-.361.864-.361h2.765c.57.001 1.123.203 1.56.571.438.368.735.88.838 1.444l.749 4.137h24.64a1.2 1.2 0 0 1 .931.447 1.187 1.187 0 0 1 .275 1Z" />
                             </svg>
-                        <span class="header-cart-count" data-header-cart-count="0"></span>
+                            <span class="header-cart-count" data-header-cart-count="0"></span>
+                        </div>
+                        <span data-header-cart-price="0">$1000</span>
                     </a>
                 </div>
-
             </div>
         </nav>
 
     </header>
 
-    <!-- <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="none">
-        <path fill="#69AFB1"
-            d="m38.98 15.598-1.863 10.29a3.698 3.698 0 0 1-1.258 2.173 3.65 3.65 0 0 1-2.347.858h-17.72l.672 3.691h16.421c.725 0 1.434.217 2.037.622a3.687 3.687 0 0 1 1.35 1.657 3.715 3.715 0 0 1-.794 4.023 3.643 3.643 0 0 1-3.995.8 3.671 3.671 0 0 1-1.646-1.36 3.71 3.71 0 0 1-.618-2.05c0-.42.073-.836.214-1.23h-8.982a3.712 3.712 0 0 1-.2 2.941 3.683 3.683 0 0 1-1.154 1.323 3.65 3.65 0 0 1-4.818-.552 3.716 3.716 0 0 1-.06-4.882L9.986 10.461H7.222c-.324 0-.635-.13-.864-.36a1.235 1.235 0 0 1 0-1.74c.23-.231.54-.361.864-.361h2.765c.57.001 1.123.203 1.56.571.438.368.735.88.838 1.444l.749 4.137h24.64a1.2 1.2 0 0 1 .931.447 1.187 1.187 0 0 1 .275 1Z" />
-        </svg> -->
-
     <main>
 
         <div class="layout-container">
-
             <!--BANNER-->
             <div class="banner">
                 <a href="#">
@@ -71,53 +63,40 @@
                 </a>
             </div>
 
-
-
             <!--PASTILLAS DE CONTENIDO-->
             <div class="container-pastillas">
                 <div class="pastilla">
-
-                    <!-- svg podría ser un ::before-->
-                    <span>Envíos gratis</span>
-                    <p>a todo el país en 24hs</p>
-
+                    <div>
+                        <span>Envíos gratis</span>
+                        <p>a todo el país en 24hs</p>
+                    </div>
                 </div>
-
                 <div class="pastilla">
-                    <!-- svg podría ser un ::before -->
-
-                    <span>Atención las 24hs</span>
-                    <p>ante cualquier consulta</p>
-
+                    <div>
+                        <span>Atención las 24hs</span>
+                        <p>ante cualquier consulta</p>
+                    </div>
                 </div>
-
                 <div class="pastilla">
-                    <!-- svg podría ser un ::before -->
-
-                    <span>Devolución sin costo</span>
-                    <p>si no es lo que esperabas</p>
-
+                    <div>
+                        <span>Devolución sin costo</span>
+                        <p>si no es lo que esperabas</p>
+                    </div>
                 </div>
-
                 <div class="pastilla">
-                    <!-- svg podría ser un ::before -->
-
-                    <span>Ofertas y descuentos</span>
-                    <p>nuevos todos los días</p>
-
+                    <div>
+                        <span>Ofertas y descuentos</span>
+                        <p>nuevos todos los días</p>
+                    </div>
                 </div>
             </div>
-
         </div>
-
-
-
 
         <!--PRODUCTOS-->
         <section class="light-bg" id="productos">
 
-            <!-- svg divisor -->
-            <div class="custom-shape-divider-top-1674181137">
+            <!-- SVG divisor -->
+            <div class="custom-shape-divider-top">
                 <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
                     preserveAspectRatio="none">
                     <path
@@ -127,7 +106,6 @@
             </div>
 
             <div class="layout-container">
-
                 <!--NAVEGACIÓN SECUNDARIA-->
                 <ul class="navigation secundaria">
                     <li><a href="" class="active">Todos</a></li>
@@ -136,60 +114,46 @@
                     <li><a href="">Periféricos PC</a></li>
                 </ul>
 
+                <!--CARDS-->
                 <span class="subtitle">Celulares</span>
                 <h1 class="h1">Productos</h1>
-
-                <!--CARDS-->
                 <div class="cards-container">
-
                     <div class="card">
-
                         <div class="card-img">
                             <img src="assets/imgs/iphone-12.jpg" alt="">
                         </div>
-
                         <div class="card-body">
                             <span class="margin-card">Celulares</span>
                             <h2 class="h2 margin-tiny">Apple iPhone 12 Negro</h2>
                             <p class="margin-card">Más allá de la velocidad. Tecnología 5G. Toda la velocidad del chip
                                 A14 Bionic...</p>
-                            <span class="margin-card">$90.000</span>
+                            <span>$90.000</span>
                             <div class="cta">
                                 <button class="button second_cta">Más info</button>
                                 <button class="button main_cta">Agregar al carrito</button>
                             </div>
                         </div>
-
                     </div>
-
-
-
                     <div class="card">
-
                         <div class="card-img">
                             <img src="assets/imgs/iphone-13.jpg" alt="">
                         </div>
-
                         <div class="card-body">
                             <span class="margin-card">Celulares</span>
                             <h2 class="h2 margin-tiny">Apple iPhone 12 Negro</h2>
                             <p class="margin-card">Más allá de la velocidad. Tecnología 5G. Toda la velocidad del chip
                                 A14 Bionic...</p>
-                            <span class="margin-card">$90.000</span>
+                            <span class="margin-card">$190.000</span>
                             <div class="cta">
                                 <button class="button second_cta">Más info</button>
                                 <button class="button main_cta">Agregar al carrito</button>
                             </div>
                         </div>
-
                     </div>
-
                     <div class="card">
-
                         <div class="card-img">
                             <img src="assets/imgs/iphone-13.jpg" alt="">
                         </div>
-
                         <div class="card-body">
                             <span class="margin-card">Celulares</span>
                             <h2 class="h2 margin-tiny">Apple iPhone 12 Negro</h2>
@@ -201,36 +165,27 @@
                                 <button class="button main_cta">Agregar al carrito</button>
                             </div>
                         </div>
-
                     </div>
-
                     <div class="card">
-
                         <div class="card-img">
                             <img src="assets/imgs/iphone-13.jpg" alt="">
                         </div>
-
                         <div class="card-body">
                             <span class="margin-card">Celulares</span>
                             <h2 class="h2 margin-tiny">Apple iPhone 12 Negro</h2>
                             <p class="margin-card">Más allá de la velocidad. Tecnología 5G. Toda la velocidad del chip
                                 A14 Bionic...</p>
-                            <span class="margin-card">$90.000</span>
+                            <span class="margin-card">$190.000</span>
                             <div class="cta">
                                 <button class="button second_cta">Más info</button>
                                 <button class="button main_cta">Agregar al carrito</button>
                             </div>
                         </div>
-
                     </div>
-
-
                     <div class="card">
-
                         <div class="card-img">
                             <img src="assets/imgs/iphone-13.jpg" alt="">
                         </div>
-
                         <div class="card-body">
                             <span class="margin-card">Celulares</span>
                             <h2 class="h2 margin-tiny">Apple iPhone 12 Negro</h2>
@@ -242,35 +197,27 @@
                                 <button class="button main_cta">Agregar al carrito</button>
                             </div>
                         </div>
-
                     </div>
 
 
                     <div class="card">
-
                         <div class="card-img">
                             <img src="assets/imgs/iphone-13.jpg" alt="">
                         </div>
-
                         <div class="card-body">
                             <span class="margin-card">Celulares</span>
                             <h2 class="h2 margin-tiny">Apple iPhone 12 Negro</h2>
                             <p class="margin-card">Más allá de la velocidad. Tecnología 5G. Toda la velocidad del chip
                                 A14 Bionic...</p>
-                            <span class="margin-card">$90.000</span>
+                            <span class="margin-card">$190.000</span>
                             <div class="cta">
                                 <button class="button second_cta">Más info</button>
                                 <button class="button main_cta">Agregar al carrito</button>
                             </div>
                         </div>
-
                     </div>
-
-
                 </div>
-
             </div>
-
         </section>
 
     </main>
