--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <!--BANNER-->
             <div class="banner">
                 <a href="#">
-                    <img src="../assets/imgs/banner-2.jpg" alt="" id="img-banner">
+                    <img src="assets/imgs/banner-2.jpg" alt="" id="img-banner">
                 </a>
             </div>
 
