--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" href="assets/icons/favicon.ico" />
 
     <!--ESTILOS DE AUTOR(AS)-->
+    <link rel="stylesheet" href="fonts/stylesheet.css">
     <link rel="stylesheet" href="styles/styles.css" />
 
 </head>
