--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     </header>
 
-    <main>
+    <main id="main">
 
         <div class="layout-container">
             <!--BANNER-->
@@ -116,8 +116,8 @@
                 </ul>
 
                 <!--CARDS-->
-                <span class="subtitle">Celulares</span>
-                <h1 class="h1">Productos</h1>
+                <span class="subtitle margin-subtitle">Celulares</span>
+                <h1 class="h1 margin-h1">Productos</h1>
                 <div class="cards-container">
                     <div class="card">
                         <div class="card-img">
@@ -220,6 +220,66 @@
                 </div>
             </div>
         </section>
+
+
+
+        <div class="bg-modal">
+
+            <section class="modal">
+
+                <article class="gallery">
+                    <div class="gallery-img-container">
+                        <img class="gallery-img" src="assets/imgs/iphone-12.jpg" alt="">
+                    </div>
+
+                    <div class="gallery-thumbnails">
+                        <img id="1" class="selected"
+                            src="https://assets.mmsrg.com/isr/166325/c1/-/pixelboxx-mss-82219044/fee_786_587_png"
+                            alt="">
+                        <img id="2"
+                            src="https://assets.mmsrg.com/isr/166325/c1/-/pixelboxx-mss-82219044/fee_786_587_png"
+                            alt="">
+                        <img id="3"
+                            src="https://assets.mmsrg.com/isr/166325/c1/-/pixelboxx-mss-82219044/fee_786_587_png"
+                            alt="">
+                        <img id="4"
+                            src="https://assets.mmsrg.com/isr/166325/c1/-/pixelboxx-mss-82219044/fee_786_587_png"
+                            alt="">
+                    </div>
+                </article>
+
+                <article class="content">
+
+                    <div class="details">
+                        <span class="subtitle margin-modal-subtitle">Celulares</span>
+                        <h1 class="h1 margin-modal">Apple iPhone 12 Negro</h1>
+                        <p class="description margin-modal">Más allá de la velocidad. Tecnología 5G. Toda la velocidad
+                            del chip
+                            A14 Bionic... Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem et nisi quam
+                            perspiciatis voluptate dolorum porro maiores neque adipisci eius, aliquid nobis tempora
+                            laudantium laboriosam, reiciendis at rerum, maxime doloribus! Lorem ipsum dolor sit amet
+                            consectetur adipisicing elit. Minima voluptate repellat animi perferendis vel architecto,
+                            optio autem doloribus. Iusto itaque quidem molestias ex at unde sapiente! Iste doloremque
+                            possimus earum.
+                        </p>
+                        <p class="price margin-modal">$90.000</p>
+                    </div>
+
+                    <div class="product-quantity">
+                        <div class="input-price">
+                            <span class="input-minus">-</span>
+                            <input class="input-number" type="text" value="0">
+                            <span class="input-plus">+</span>
+                        </div>
+                        <button class="button main_cta">Agregar al carrito</button>
+                    </div>
+                </article>
+
+                <span class="close-modal">x</span>
+
+            </section>
+
+        </div>
 
     </main>
 
