--- a/index.html
+++ b/index.html
@@ -286,26 +286,31 @@
         <div class="bg-modal-carrito">
 
             <section class="carrito">
-                <span>x</span>
+                <span class="close-modal-carrito">x</span>
 
-                <h1 class="h1">Mi carrito</h1>
-                <span class="subtitle-carrito">4 items</span>
+                <div>
+                    <h1 class="h1">Mi carrito</h1>
+                    <span class="subtitle-carrito">4 items</span>
+                </div>
 
                 <div class="products-container">
 
                     <div class="product-added">
 
-                        <img class="img-carrito" src="assets/imgs/iphone-12.jpg" alt="">
-                        <div>
-                            <h2>Iphone 9 Pro Max</h2>
-                            <p>90.000</p>
+                        <div class="product-info">
+                            <img class="img-carrito" src="assets/imgs/iphone-12.jpg" alt="">
+                            <div>
+                                <h2 class="h2">Iphone 9 Pro Max</h2>
+                                <p>$90.000</p>
+                            </div>
                         </div>
-                        <div>
+
+                        <div class="product-action">
                             <span class="delete-item">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
-                                    <path fill="#69AFB1"
+                                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48">
+                                    <path
                                         d="M36.813 13.782a28.09 28.09 0 0 0-.325-1.166c-.212-.775-.748-.775-1.544-.909l-4.315-.558c-.536-.091-.536-.091-.748-.566C29.174 8.95 28.955 8 28.183 8h-8.37c-.771 0-.983.95-1.69 2.591-.211.466-.211.466-.747.567l-4.323.558c-.788.133-1.357.208-1.569.983 0 0-.097.341-.3 1.083-.26.991-.366.883.528.883h24.573c.893.008.796.108.528-.883ZM34.026 17.33H13.97c-1.349 0-1.414.184-1.333 1.226l1.52 20.211c.13 1.025.227 1.233 1.422 1.233h16.837c1.194 0 1.292-.208 1.422-1.233l1.52-20.211c.08-1.05.015-1.225-1.334-1.225Z" />
-                                    </svg>
+                                </svg>
                             </span>
                             <span class="cantidad">Cantidad: 1</span>
                         </div>
@@ -313,17 +318,20 @@
 
                     <div class="product-added">
 
-                        <img class="img-carrito" src="assets/imgs/iphone-12.jpg" alt="">
-                        <div>
-                            <h2>Iphone 9 Pro Max</h2>
-                            <p>90.000</p>
+                        <div class="product-info">
+                            <img class="img-carrito" src="assets/imgs/iphone-12.jpg" alt="">
+                            <div>
+                                <h2 class="h2">Iphone 9 Pro Max</h2>
+                                <p>$90.000</p>
+                            </div>
                         </div>
-                        <div>
+
+                        <div class="product-action">
                             <span class="delete-item">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
-                                    <path fill="#69AFB1"
+                                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48">
+                                    <path
                                         d="M36.813 13.782a28.09 28.09 0 0 0-.325-1.166c-.212-.775-.748-.775-1.544-.909l-4.315-.558c-.536-.091-.536-.091-.748-.566C29.174 8.95 28.955 8 28.183 8h-8.37c-.771 0-.983.95-1.69 2.591-.211.466-.211.466-.747.567l-4.323.558c-.788.133-1.357.208-1.569.983 0 0-.097.341-.3 1.083-.26.991-.366.883.528.883h24.573c.893.008.796.108.528-.883ZM34.026 17.33H13.97c-1.349 0-1.414.184-1.333 1.226l1.52 20.211c.13 1.025.227 1.233 1.422 1.233h16.837c1.194 0 1.292-.208 1.422-1.233l1.52-20.211c.08-1.05.015-1.225-1.334-1.225Z" />
-                                    </svg>
+                                </svg>
                             </span>
                             <span class="cantidad">Cantidad: 1</span>
                         </div>
@@ -331,17 +339,20 @@
 
                     <div class="product-added">
 
-                        <img class="img-carrito" src="assets/imgs/iphone-12.jpg" alt="">
-                        <div>
-                            <h2>Iphone 9 Pro Max</h2>
-                            <p>90.000</p>
+                        <div class="product-info">
+                            <img class="img-carrito" src="assets/imgs/iphone-12.jpg" alt="">
+                            <div>
+                                <h2 class="h2">Iphone 9 Pro Max</h2>
+                                <p>$90.000</p>
+                            </div>
                         </div>
-                        <div>
+
+                        <div class="product-action">
                             <span class="delete-item">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
-                                    <path fill="#69AFB1"
+                                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48">
+                                    <path
                                         d="M36.813 13.782a28.09 28.09 0 0 0-.325-1.166c-.212-.775-.748-.775-1.544-.909l-4.315-.558c-.536-.091-.536-.091-.748-.566C29.174 8.95 28.955 8 28.183 8h-8.37c-.771 0-.983.95-1.69 2.591-.211.466-.211.466-.747.567l-4.323.558c-.788.133-1.357.208-1.569.983 0 0-.097.341-.3 1.083-.26.991-.366.883.528.883h24.573c.893.008.796.108.528-.883ZM34.026 17.33H13.97c-1.349 0-1.414.184-1.333 1.226l1.52 20.211c.13 1.025.227 1.233 1.422 1.233h16.837c1.194 0 1.292-.208 1.422-1.233l1.52-20.211c.08-1.05.015-1.225-1.334-1.225Z" />
-                                    </svg>
+                                </svg>
                             </span>
                             <span class="cantidad">Cantidad: 1</span>
                         </div>
@@ -349,31 +360,59 @@
 
                     <div class="product-added">
 
-                        <img class="img-carrito" src="assets/imgs/iphone-12.jpg" alt="">
-                        <div>
-                            <h2>Iphone 9 Pro Max</h2>
-                            <p>90.000</p>
+                        <div class="product-info">
+                            <img class="img-carrito" src="assets/imgs/iphone-12.jpg" alt="">
+                            <div>
+                                <h2 class="h2">Iphone 9 Pro Max</h2>
+                                <p>$90.000</p>
+                            </div>
                         </div>
-                        <div>
+
+                        <div class="product-action">
                             <span class="delete-item">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48" fill="none">
-                                    <path fill="#69AFB1"
+                                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48">
+                                    <path
                                         d="M36.813 13.782a28.09 28.09 0 0 0-.325-1.166c-.212-.775-.748-.775-1.544-.909l-4.315-.558c-.536-.091-.536-.091-.748-.566C29.174 8.95 28.955 8 28.183 8h-8.37c-.771 0-.983.95-1.69 2.591-.211.466-.211.466-.747.567l-4.323.558c-.788.133-1.357.208-1.569.983 0 0-.097.341-.3 1.083-.26.991-.366.883.528.883h24.573c.893.008.796.108.528-.883ZM34.026 17.33H13.97c-1.349 0-1.414.184-1.333 1.226l1.52 20.211c.13 1.025.227 1.233 1.422 1.233h16.837c1.194 0 1.292-.208 1.422-1.233l1.52-20.211c.08-1.05.015-1.225-1.334-1.225Z" />
-                                    </svg>
+                                </svg>
                             </span>
                             <span class="cantidad">Cantidad: 1</span>
                         </div>
                     </div>
+
+                    <div class="product-added">
+
+                        <div class="product-info">
+                            <img class="img-carrito" src="assets/imgs/iphone-12.jpg" alt="">
+                            <div>
+                                <h2 class="h2">Iphone 9 Pro Max</h2>
+                                <p>$90.000</p>
+                            </div>
+                        </div>
+
+                        <div class="product-action">
+                            <span class="delete-item">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48">
+                                    <path
+                                        d="M36.813 13.782a28.09 28.09 0 0 0-.325-1.166c-.212-.775-.748-.775-1.544-.909l-4.315-.558c-.536-.091-.536-.091-.748-.566C29.174 8.95 28.955 8 28.183 8h-8.37c-.771 0-.983.95-1.69 2.591-.211.466-.211.466-.747.567l-4.323.558c-.788.133-1.357.208-1.569.983 0 0-.097.341-.3 1.083-.26.991-.366.883.528.883h24.573c.893.008.796.108.528-.883ZM34.026 17.33H13.97c-1.349 0-1.414.184-1.333 1.226l1.52 20.211c.13 1.025.227 1.233 1.422 1.233h16.837c1.194 0 1.292-.208 1.422-1.233l1.52-20.211c.08-1.05.015-1.225-1.334-1.225Z" />
+                                </svg>
+                            </span>
+                            <span class="cantidad">Cantidad: 1</span>
+                        </div>
+                    </div>
+
+
 
                 </div>
 
-                <div class="subtotal">
-                    <p>Total</p>
-                    <p>$90.000</p>
-                </div>
+                <div>
+                    <div class="subtotal">
+                        <p>Total</p>
+                        <p>$90.000</p>
+                    </div>
 
-                <button class="button main_cta cta_light-bg">Checkout</button>
-                <button>Vaciar carrito</button>
+                    <button class="button main_cta cta_light-bg">Checkout</button>
+                    <button class="empty-button">Vaciar carrito</button>
+                </div>
 
             </section>
 
