--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     </div>
                     <div class="card">
                         <div class="card-img">
-                            <img src="assets/imgs/iphone-13.jpg" alt="">
+                            <img src="assets/imgs/lenovo-legion.jpg" alt="">
                         </div>
                         <div class="card-body">
                             <span class="margin-card">Celulares</span>
@@ -153,7 +153,7 @@
                     </div>
                     <div class="card">
                         <div class="card-img">
-                            <img src="assets/imgs/iphone-13.jpg" alt="">
+                            <img src="assets/imgs/mouse-logitech.jpg" alt="">
                         </div>
                         <div class="card-body">
                             <span class="margin-card">Celulares</span>
@@ -185,7 +185,7 @@
                     </div>
                     <div class="card">
                         <div class="card-img">
-                            <img src="assets/imgs/iphone-13.jpg" alt="">
+                            <img src="assets/imgs/LogitechK120.jpg" alt="">
                         </div>
                         <div class="card-body">
                             <span class="margin-card">Celulares</span>
@@ -203,7 +203,7 @@
 
                     <div class="card">
                         <div class="card-img">
-                            <img src="assets/imgs/iphone-13.jpg" alt="">
+                            <img src="assets/imgs/Logitech-M100.jpg" alt="">
                         </div>
                         <div class="card-body">
                             <span class="margin-card">Celulares</span>
@@ -229,21 +229,21 @@
 
                 <article class="gallery">
                     <div class="gallery-img-container">
-                        <img class="gallery-img" src="assets/imgs/iphone-12.jpg" alt="">
+                        <img class="gallery-img" src="assets/imgs/lenovo-legion.jpg" alt="">
                     </div>
 
                     <div class="gallery-thumbnails">
                         <img id="1" class="selected"
-                            src="https://assets.mmsrg.com/isr/166325/c1/-/pixelboxx-mss-82219044/fee_786_587_png"
+                            src="assets/imgs/lenovo-legion.jpg"
                             alt="">
                         <img id="2"
-                            src="https://assets.mmsrg.com/isr/166325/c1/-/pixelboxx-mss-82219044/fee_786_587_png"
+                            src="assets/imgs/lenovo-legion-2.jpg"
                             alt="">
                         <img id="3"
-                            src="https://assets.mmsrg.com/isr/166325/c1/-/pixelboxx-mss-82219044/fee_786_587_png"
+                            src="assets/imgs/lenovo-legion-3.jpg"
                             alt="">
                         <img id="4"
-                            src="https://assets.mmsrg.com/isr/166325/c1/-/pixelboxx-mss-82219044/fee_786_587_png"
+                            src="assets/imgs/lenovo-legion-4.jpg"
                             alt="">
                     </div>
                 </article>
