--- a/index.html
+++ b/index.html
@@ -233,18 +233,10 @@
                     </div>
 
                     <div class="gallery-thumbnails">
-                        <img id="1" class="selected"
-                            src="assets/imgs/lenovo-legion.jpg"
-                            alt="">
-                        <img id="2"
-                            src="assets/imgs/lenovo-legion-2.jpg"
-                            alt="">
-                        <img id="3"
-                            src="assets/imgs/lenovo-legion-3.jpg"
-                            alt="">
-                        <img id="4"
-                            src="assets/imgs/lenovo-legion-4.jpg"
-                            alt="">
+                        <img id="1" class="selected" src="assets/imgs/lenovo-legion.jpg" alt="">
+                        <img id="2" src="assets/imgs/lenovo-legion-2.jpg" alt="">
+                        <img id="3" src="assets/imgs/lenovo-legion-3.jpg" alt="">
+                        <img id="4" src="assets/imgs/lenovo-legion-4.jpg" alt="">
                     </div>
                 </article>
 
