--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <!--CARDS-->
                 <span class="subtitle margin-subtitle">Celulares</span>
                 <h1 class="h1 margin-h1">Productos</h1>
-                <div class="cards-container">
+                <div class="cards-container" id="products">
                     <div class="card">
                         <div class="card-img">
                             <img src="assets/imgs/iphone-12.jpg" alt="">
@@ -167,7 +167,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card">
+                    <!-- <div class="card">
                         <div class="card-img">
                             <img src="assets/imgs/iphone-13.jpg" alt="">
                         </div>
@@ -218,12 +218,12 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </section>
 
 
 
-        <div class="bg-modal">
+        <!-- <div class="bg-modal">
 
             <section class="modal">
 
@@ -271,11 +271,11 @@
 
             </section>
 
-        </div>
+        </div> -->
 
 
 
-        <div class="bg-modal-carrito">
+        <!-- <div class="bg-modal-carrito">
 
             <section class="carrito">
                 <span class="close-modal-carrito">x</span>
@@ -408,13 +408,15 @@
 
             </section>
 
-        </div>
+        </div> -->
 
 
 
 
 
     </main>
+
+    <script src="main.js"></script>
 
 </body>
 
